python/testData/inspections/PyUnresolvedReferencesInspection/unknownElementInDunderAll.py
a = 1
b = 1


__all__ = ["a", "<error descr="Unresolved reference 'a1'">a1</error>"]

__all__ = ["a", "<error descr="Unresolved reference 'a1'">a1</error>", 1]